--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ body {
 
 .pricingParent {
     font-family: Fraunces;
-    text-align: center;
 }
 
 .pricingChild1 {
@@ -63,7 +62,7 @@ body {
     display: inline-block;
     align-items: center;
     vertical-align: middle;
-    margin: auto;
+
 }
 
 .pricingChild2 {
@@ -73,6 +72,11 @@ body {
     align-items: center;
     vertical-align: middle;
     margin: auto;
+    inset: 0px;
+    margin: auto;
+    top: 50%;
+    transform: translateY(+25%);
+    padding-left: 1rem;
 }
 
 .mainCard {
